[package]
publish = false
name = "adblock"
version = "0.6.0"
edition = "2018"
authors = ["Árni Dagur <arni@dagur.eu>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
homepage = "https://github.com/ArniDagur/python-adblock"
repository = "https://github.com/ArniDagur/python-adblock"

[package.metadata.maturin]
classifier = [
    "Programming Language :: Python",
    "Programming Language :: Rust",
    "License :: OSI Approved :: MIT License",
    "License :: OSI Approved :: Apache Software License",
]
requires-python = ">=3.7"

[profile.release]
debug = true

[dependencies]
adblock = { version = "=0.5.6", default-features = false, features = ["full-regex-handling", "embedded-domain-resolver"] }
pyo3 = { version = "0.17", features = ["abi3-py37", "extension-module"] }

[lib]
name = "adblock"
crate-type = ["rlib", "cdylib"]
